adds client install to package, and instructions in the readme

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon server.js",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
+    "client-install": "cd client && npm install",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
